// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots COMPONENTS|Complex controls/ControlsGroup Different controls group 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  color: #333333;
  height: 42px;
  width: 100%;
  min-width: 142px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  box-sizing: border-box;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  border: 2px solid #77c8ff;
  overflow: hidden;
  z-index: 1;
  margin-left: -2px;
  padding: 10px 16px;
  padding: 10px;
}

.c4:hover {
  border-color: #ff9100;
  z-index: 2;
}

.c5 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  position: absolute;
  left: 16px;
  right: 0;
  top: 10px;
  bottom: 0;
  width: calc(100% - 32px);
  height: 100%;
  padding: 0;
  height: 20px;
  width: calc(100% - 20px);
  left: 10px;
  background: transparent;
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  font-weight: 600;
}

.c5,
.c5:focus {
  border: none;
  outline: none;
  resize: none;
}

.c5::-webkit-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c5::-moz-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c5::placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c5::-moz-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c5:focus ~ .AirportInput__geo .AirportInput__spell {
  display: block;
}

.c6 {
  -webkit-appearance: none;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c7 {
  visibility: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  font-weight: 600;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8 {
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  font-size: 14px;
  color: #808080;
  background: #ffffff;
  padding: 1px 0 0px 10px;
  margin: -1px 0;
}

.c8:empty {
  display: none;
}

.c8::before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: -12px;
  width: 12px;
  height: 100%;
  background: linear-gradient(90deg,rgba(255,255,255,0) 0%,#ffffff 100%);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .c10 {
  opacity: 0;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
}

.c1:hover .c10 {
  opacity: 1;
  -webkit-transition-delay: .15s;
  transition-delay: .15s;
}

.c2 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 20px;
  line-height: 20px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 21px 0 0 21px;
  padding: 11.0px;
  padding-right: 13.1px;
  padding-left: 21px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c2 .icon-inherit-color {
  fill: #ffffff;
}

.c2:hover,
.c2:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c2:active {
  background: #008ae6;
  box-shadow: none;
}

.c9 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 20px;
  line-height: 20px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 0 21px 21px 0;
  padding: 11.0px;
  padding-right: 21px;
  padding-left: 13.1px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c9 .icon-inherit-color {
  fill: #ffffff;
}

.c9:hover,
.c9:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c9:active {
  background: #008ae6;
  box-shadow: none;
}

.c3 {
  display: inline-block;
  vertical-align: top;
  padding: 0 0px 0 0px;
}

@media screen and (max-width:1199px) {
  .responsive .c1 .c10,
  .responsive-booking .c1 .c10 {
    opacity: 1;
  }
}

@media screen and (max-width:1199px) {
  .responsive .c2,
  .responsive-booking .c2 {
    max-width: 340px;
  }
}

@media screen and (max-width:1199px) {
  .responsive .c9,
  .responsive-booking .c9 {
    max-width: 340px;
  }
}

<div
  className="c0 responsive"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      size="large"
    >
      <span
        className="c3"
        size="large"
      >
        Пойти
      </span>
    </button>
    <div
      className="c4"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="c5"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="c6 AirportInput__geo"
      >
        <div
          className="c7"
        >
          Шереметьево
        </div>
      </div>
      <div
        className="c8"
      >
        SVO
      </div>
    </div>
    <button
      className="c9"
      size="large"
    >
      <span
        className="c3"
        size="large"
      >
        Найти
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Complex controls/ControlsGroup Inputs group 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c9 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 15px;
  width: 15px;
  fill: transparent;
  opacity: 1;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  color: #333333;
  height: 42px;
  width: 100%;
  min-width: 142px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  box-sizing: border-box;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  border: 2px solid #77c8ff;
  border-radius: 21px 0 0 21px;
  overflow: hidden;
  z-index: 1;
  padding: 10px 16px;
  padding-right: 10px;
}

.c2:hover {
  border-color: #ff9100;
  z-index: 2;
}

.c12 {
  color: #333333;
  height: 42px;
  width: 100%;
  min-width: 142px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  box-sizing: border-box;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  border: 2px solid #77c8ff;
  border-radius: 0 21px 21px 0;
  overflow: hidden;
  z-index: 1;
  margin-left: -2px;
  padding: 10px 16px;
  padding-left: 10px;
}

.c12:hover {
  border-color: #ff9100;
  z-index: 2;
}

.c3 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  position: absolute;
  left: 16px;
  right: 0;
  top: 10px;
  bottom: 0;
  width: calc(100% - 32px);
  height: 100%;
  padding: 0;
  height: 20px;
  width: calc(100% - 26px);
  background: transparent;
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  font-weight: 600;
}

.c3,
.c3:focus {
  border: none;
  outline: none;
  resize: none;
}

.c3::-webkit-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c3::-moz-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c3::placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c3::-moz-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c3:focus ~ .AirportInput__geo .AirportInput__spell {
  display: block;
}

.c13 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  position: absolute;
  left: 16px;
  right: 0;
  top: 10px;
  bottom: 0;
  width: calc(100% - 32px);
  height: 100%;
  padding: 0;
  height: 20px;
  width: calc(100% - 26px);
  left: 10px;
  background: transparent;
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  font-weight: 600;
}

.c13,
.c13:focus {
  border: none;
  outline: none;
  resize: none;
}

.c13::-webkit-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c13::-moz-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c13:-ms-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c13::placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c13::-webkit-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c13::-moz-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c13:-ms-input-placeholder {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  color: #b3b3b3;
  opacity: 1;
}

.c13:focus ~ .AirportInput__geo .AirportInput__spell {
  display: block;
}

.c4 {
  -webkit-appearance: none;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  visibility: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  font-weight: 600;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  line-height: 18px;
  color: inherit;
  font-size: 14px;
  color: #808080;
  background: #ffffff;
  padding: 1px 0 0px 10px;
  margin: -1px 0;
}

.c6:empty {
  display: none;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: -12px;
  width: 12px;
  height: 100%;
  background: linear-gradient(90deg,rgba(255,255,255,0) 0%,#ffffff 100%);
}

.c7 {
  position: relative;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 0;
  cursor: pointer;
}

.c7 .icon-inherit-color {
  fill: #96a0b3;
}

.c7:hover .icon-inherit-color {
  fill: #38afff;
}

.c11 {
  box-sizing: content-box;
  width: 15px;
  padding: 5px 0;
  position: absolute;
  left: -7.5px;
  top: 50%;
  margin-top: -12.5px;
  z-index: 3;
  -webkit-transfrom: translateZ(0);
  -ms-transfrom: translateZ(0);
  transfrom: translateZ(0);
  background: linear-gradient(180deg,rgba(255,255,255,0) 0%,#ffffff 15%,#ffffff 85%,rgba(255,255,255,0) 100%);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .c10 {
  opacity: 0;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
}

.c1:hover .c10 {
  opacity: 1;
  -webkit-transition-delay: .15s;
  transition-delay: .15s;
}

@media screen and (max-width:1199px) {
  .responsive .c1 .c10,
  .responsive-booking .c1 .c10 {
    opacity: 1;
  }
}

<div
  className="c0 responsive"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="c3"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="c4 AirportInput__geo"
      >
        <div
          className="c5"
        >
          Шереметьево
        </div>
      </div>
      <div
        className="c6"
      >
        SVO
      </div>
    </div>
    <div
      className="c7"
      data-test-id="site.search_form.swap"
      onClick={[Function]}
    >
      <span
        className="c8"
      >
        <svg
          className="c9 c10 c11 icon-inherit-color"
          fill={null}
          name="left-right"
          rotate=""
          size="xxsmall"
        >
          <use
            xlinkHref="#kb_left-right"
          />
        </svg>
      </span>
    </div>
    <div
      className="c12"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="c13"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={null}
        onFocus={[Function]}
        onKeyDown={[Function]}
        rows="1"
        value="Несуществующий город"
        wrap="off"
      />
      <div
        className="c4 AirportInput__geo"
      >
        <div
          className="c5"
        >
          Несуществующий город
        </div>
      </div>
      <div
        className="c6"
      >
        
      </div>
    </div>
  </div>
</div>
`;
